Fix overflows

--- a/src/map/map.css
+++ b/src/map/map.css
@@ -1,6 +1,6 @@
 .map-container {
     width: 100%;
-    height: calc(100% - var(--navbar-height));
+    height: 100%;
 }
 
 .map-view-box {
